--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,6 @@ add_subdirectory(day7/part1/cpp)
 add_subdirectory(day7/part2/cpp)
 add_subdirectory(day8/part1/cpp)
 add_subdirectory(day8/part2/cpp)
+add_subdirectory(day9/part1/cpp)
 add_subdirectory(day17/part1/cpp)
 add_subdirectory(day17/part2/cpp)
