--- a/day9/part1/cpp/CMakeLists.txt
+++ b/day9/part1/cpp/CMakeLists.txt
@@ -7,4 +7,4 @@ set(part_nr 1)
 set(target_name day${day_nr}_part${part_nr})
 configure_file(../../input_data.txt ${CMAKE_BINARY_DIR}/day${day_nr}/part${part_nr}/cpp/input_data.txt)
 
-add_executable(${target_name} main.cpp StringTools.cpp StringTools.h)
+add_executable(${target_name} main.cpp)
