--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,5 +21,7 @@ add_subdirectory(day8/part1/cpp)
 add_subdirectory(day8/part2/cpp)
 add_subdirectory(day9/part1/cpp)
 add_subdirectory(day9/part2/cpp)
+add_subdirectory(day10/part1/cpp)
+add_subdirectory(day10/part2/cpp)
 add_subdirectory(day17/part1/cpp)
 add_subdirectory(day17/part2/cpp)
